# clara

./: .robotpkg.sh  CMakeLists.txt  README  README.md
include/clara/: clara.hpp  dtm.hpp  gdal.hpp  region.hpp
src/: clara.cpp  clara_dtm.cpp  clara_region.cpp  dsm_to_dtm.cpp  dsm_to_region.cpp  dtm.cpp  dtm_to_region.cpp  region.cpp  rgba_to_region.cpp  tiff_to_region.cpp
